elixir-lang (1.7.4-1) unstable; urgency=medium

  * Apply patch provided by Tomas Janousek (Closes: #930497)
    - The patch makes Elixir explicitly depend on
      erlang-base:any | erlang-base-hipe:any
  * Exclude lib/mix/test/fixtures/rebar and lib/mix/test/fixtures/rebar3.
  * Specify license for lib/elixir/unicode/*.txt in debian/copyright.
  * Put disable_rebar3_tests.patch back.

 -- Evgeny Golyshev <eugulixes@gmail.com>  Sun, 23 Jun 2019 22:59:07 +0300

elixir-lang (1.7.4-0.1) unstable; urgency=medium

  * Non-maintainer upload with authorization from current maintainer.
  * New upstream release:
    - Fixes FTBFS (Closes: #910307).
  * Removed all patches.
  * Add patch to remove the UTF-8 warning (Closes: #912207).

 -- Thomas Goirand <zigo@debian.org>  Tue, 30 Oct 2018 07:56:01 +0000

elixir-lang (1.6.5-1) unstable; urgency=medium

  [ Antonio Terceiro ]
  * Drop myself from the Uploaders field

  [ Evgeny Golyshev ]
  * New upstream release (Closes: #869030)
    - The tests from the latest version with newer dependencies seem to be
      fine again (Closes: #871120)
  * Substitute alioth for salsa in Vcs-Browser and Vcs-Git fields
  * Add debian/upstream/metadata
  * Remove Testsuite from debian/control
  * Bump Standards-Version to 4.1.4
  * Bump compat version to 10
  * Add docs file containing NOTICE
  * Use only https in Format field of debian/copyright
  * Do not mention lib/elixir/src/elixir_parser.erl in debian/copyright
  * Disable one more rebar3 related test
  * Temporarily disable rebar related test

 -- Evgeny Golyshev <eugulixes@gmail.com>  Wed, 09 May 2018 23:22:08 +0300

elixir-lang (1.3.3-2) unstable; urgency=medium

  * Add erlang-crypto to Build-Depends (Closes: #837236)

 -- Evgeny Golyshev <eugulixes@gmail.com>  Wed, 05 Oct 2016 22:43:17 +0300

elixir-lang (1.3.3-1) unstable; urgency=medium

  * New upstream release
  * Add patch disabling tests related to rebar3
